tests/miniJava/pos/000910_cdrc2.MiniJava
class java { public static void Main ( String [ ] java ) { if ( 0 . length ) System.out.println ( { } ) ; else java [ 0 ] = 0 ; } }
