tests/miniJava/neg/005004_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { public int [] java ( int [] java , int [] length ) { return 0 ; } }
